--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 services:
   pgsql:
     image: 'postgres:17'
-    container_name: pgsql
+    container_name: pgsql_sneat
     restart: always
     ports:
       - '${FORWARD_DB_PORT:-5433}:5432'
@@ -29,7 +29,7 @@ services:
 
   redis:
     image: 'redis:alpine'
-    container_name: redis
+    container_name: redis_sneat
     ports:
       - '${FORWARD_REDIS_PORT:-6379}:6379'
     volumes:
@@ -43,23 +43,22 @@ services:
         - ping
       retries: 3
       timeout: 5s
-
-  soketi:
-    image: 'quay.io/soketi/soketi:latest-16-alpine'
-    container_name: soketi
-    environment:
-      SOKETI_DEBUG: '${SOKETI_DEBUG:-1}'
-      SOKETI_METRICS_SERVER_PORT: '9601'
-      SOKETI_DEFAULT_APP_ID: '${PUSHER_APP_ID}'
-      SOKETI_DEFAULT_APP_KEY: '${PUSHER_APP_KEY}'
-      SOKETI_DEFAULT_APP_SECRET: '${PUSHER_APP_SECRET}'
-    ports:
-      - '${PUSHER_PORT:-6001}:6001'
-      - '${PUSHER_METRICS_PORT:-9601}:9601'
-    depends_on:
-      - redis
-    networks:
-      - laravel-net
+  # soketi:
+  #   image: 'quay.io/soketi/soketi:latest-16-alpine'
+  #   container_name: soketi_sneat
+  #   environment:
+  #     SOKETI_DEBUG: '${SOKETI_DEBUG:-1}'
+  #     SOKETI_METRICS_SERVER_PORT: '9601'
+  #     SOKETI_DEFAULT_APP_ID: '${PUSHER_APP_ID}'
+  #     SOKETI_DEFAULT_APP_KEY: '${PUSHER_APP_KEY}'
+  #     SOKETI_DEFAULT_APP_SECRET: '${PUSHER_APP_SECRET}'
+  #   ports:
+  #     - '${PUSHER_PORT:-6001}:6001'
+  #     - '${PUSHER_METRICS_PORT:-9601}:9601'
+  #   depends_on:
+  #     - redis
+  #   networks:
+  #     - laravel-net
 
 networks:
   laravel-net:
